Updated icons and changed URL creation